tests/semantic/arrayAccess_err2.mtp
(*Testing array access with string literal*)

const index := 'error';
var test : array(30) of integer;

begin
	test('error') := 2;
end.